--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
 }
 
 body {
-    background-color: #1E2A38;
-    color: #D0D0D0;
+    /*background-color: #1E2A38;*/
+    background-color: #0f9b3e;
+    color: #ffffff;
     max-width: 1024px;
 }
 
