--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
 }
 
 body {
-    /*background-color: #1E2A38;*/
-    background-color: #0f9b3e;
+    background-color: #1E2A38;
     color: #ffffff;
     max-width: 1024px;
 }
